added navbar + finished homepage + intialized work page

--- a/index.html
+++ b/index.html
@@ -7,9 +7,21 @@
     </head>
 
     <body>
+        <!-- <div class="vertical-line"></div> -->
         <div>
             <h1 class="amiri">aidan chang</h1>
-            <p>f;dslkgjds;fglksdjfg;ldksjfgsd;flkgjsdf;lgkjdfsg;dslfkjgds;flgkjdsf;glkdsjfg;sdflkgjfds;glksdjfg;lkjsdfgsdfglksdjfgdfkj;dlfkgjdsf;lgkjl</p>
+            <nav id="navbar">
+                <a class="element" href="home.html"><b>home</b></a> //
+                <a class="element" href="work.html">work</a> //
+                <a class="element" href="aboutme.html">more about me</a> //
+                <a class="element" href="bookshelf.html">bookshelf</a> //
+                <a class="element" href="aspirations.html">aspirations</a>
+            </nav><br>
+            <p class="pp">Hello! My name is Aidan Chang. Based out of Chicago, IL but I attend the Illinois Math and Science Academy as a 16 year old sophomore. I have a strong passion for computer science, specifically data structures and algorithms. I'm most familiar with Python, but I am also learning Java and C++.</p>
+            <br>
+            <p class="fakeheader">reach me</p>
+            <p>email: <a class="link" href="mailto:achang1@imsa.edu">achang1@imsa.edu</a></p>
+            <p>github: <a class="link" href="https://github.com/plinygg">plinygg</a></p>
         </div>
     </body>
 </html>
