changes made to everything

--- a/bookshelf.html
+++ b/bookshelf.html
@@ -10,18 +10,14 @@
         <!-- <div class="vertical-line"></div> -->
         <div>
             <h1 class="amiri">aidan chang</h1>
-            <nav id="navbar" class="">
-                <a class="element" href="index.html"><b>home</b></a> //
+            <nav id="navbar">
+                <a class="element" href="index.html">home</a> //
                 <a class="element" href="work.html">work</a> //
                 <a class="element" href="aboutme.html">fun</a> //
-                <a class="element" href="aspirations.html">aspirations</a> //
-                <a class="element" href="tutoring.html">tutoring</a>
+                <a class="element" href="bookshelf.html"><b>bookshelf</b></a> //
+                <a class="element" href="aspirations.html">aspirations</a>
             </nav><br>
-            <p class="pp">Hello! My name is Aidan Chang. Based out of Chicago, IL but I attend the <a class="link3" href="https://imsa.edu/">Illinois Math and Science Academy</a> as a 16 year old sophomore. 
-                I previously attended <a class="link3" href="https://www.wyoung.org/" >Whitney M. Young Magnet High School</a> for my freshman year. 
-                I have a strong passion for computer science, specifically data structures and algorithms. 
-                I'm most familiar with <a class="link3" href="https://www.python.org/">Python</a>, but I also know <a class="link3" href="https://www.java.com/en/">Java</a> and <a class="link3" href="https://cplusplus.com/">C++</a>.</p>
-            <br>
+            <p>work in progress!!</p>
             <p class="fakeheader">find me</p>
             <p>email: <a class="link2" href="mailto:achang1@imsa.edu">achang1@imsa.edu</a></p>
             <p>github: <a class="link2" href="https://github.com/plinygg">plinygg</a></p>
@@ -29,6 +25,5 @@
             <p>instagram: <a class="link2" href="https://www.instagram.com/aircondition.cs/">@aircondition.cs</a></p>
             <p>youtube: <a class="link2" href="https://www.youtube.com/@airconditioncs">@airconditioncs</a></p>
         </div>
-
     </body>
 </html>
