--- a/work.html
+++ b/work.html
@@ -13,27 +13,89 @@
             <nav id="navbar">
                 <a class="element" href="index.html">home</a> //
                 <a class="element" href="work.html"><b>work</b></a> //
-                <a class="element" href="aboutme.html">more about me</a> //
-                <a class="element" href="bookshelf.html">bookshelf</a> //
-                <a class="element" href="aspirations.html">aspirations</a>
+                <a class="element" href="aboutme.html">fun</a> //
+                <a class="element" href="aspirations.html">aspirations</a> //
+                <a class="element" href="tutoring.html">tutoring</a>
             </nav><br>
+
             <p class="fakeheader">projects:</p>
-            <div class="table">
-                <table>
-                    <tr>
-                        <th>name</th>
-                        <th>status</th>
-                    </tr>
-                    <tr>
-                        <td>wordle solver</td>
-                        <td>done</td>
-                    </tr>
-                    <tr>
-                        <td>maze generator</td>
-                        <td>done</td>
-                    </tr>
-                </table>
-            </div>
+            <table class="center">
+                <tr>
+                    <th>name</th>
+                    <th>status</th>
+                </tr>
+                <tr>
+                    <td><a class="link" href="https://github.com/plinygg/wordle">wordle solver</a></td>
+                    <td class="done">done</td>
+                </tr>
+                <tr>
+                    <td><a class="link" href="https://github.com/plinygg/maze-solver">maze generator</a></td>
+                    <td class="done">done</td>
+                </tr>
+                <tr>
+                    <td><a class="link" href="https://github.com/plinygg/plinko2">plinko in python</a></td>
+                    <td class="progress">in progress</td>
+                </tr>
+                <tr>
+                    <td>gas mileage weigher</td>
+                    <td class="not">not started</td>
+                </tr>
+            </table>
+
+            <p class="fakeheader">experience:</p>
+            <table class="center">
+                <tr>
+                    <th>name</th>
+                    <th>date</th>
+                </tr>
+                <tr>
+                    <td><a class="link" href="index.html">##</a></td>
+                    <td>##-##</td>
+                </tr>
+                <tr>
+                    <td><a class="link" href="index.html">##</a></td>
+                    <td>##-##</td>
+                </tr>
+            </table><br>
+
+            <p class="fakeheader">learning:</p>
+            <table class="center">
+                <tr>
+                    <th>name</th>
+                    <th>date</th>
+                </tr>
+                <tr>
+                    <td><a class="link" href="index.html">##</a></td>
+                    <td>##-##</td>
+                </tr>
+                <tr>
+                    <td><a class="link" href="index.html">##</a></td>
+                    <td>##-##</td>
+                </tr>
+            </table><br>
+
+            <p class="fakeheader">teaching:</p>
+            <table class="center">
+                <tr>
+                    <th>name</th>
+                    <th>date</th>
+                </tr>
+                <tr>
+                    <td><a class="link" href="index.html">##</a></td>
+                    <td>##-##</td>
+                </tr>
+                <tr>
+                    <td><a class="link" href="index.html">##</a></td>
+                    <td>##-##</td>
+                </tr>
+            </table>
+            
+            <p class="fakeheader">find me</p>
+            <p>email: <a class="link2" href="mailto:achang1@imsa.edu">achang1@imsa.edu</a></p>
+            <p>github: <a class="link2" href="https://github.com/plinygg">plinygg</a></p>
+            <p>linkedin: <a class="link2" href="https://www.linkedin.com/in/aidan-chang-7b1b21337/">me</a></p>
+            <p>instagram: <a class="link2" href="https://www.instagram.com/aircondition.cs/">@aircondition.cs</a></p>
+            <p>youtube: <a class="link2" href="https://www.youtube.com/@airconditioncs">@airconditioncs</a></p>
         </div>
     </body>
 </html>
