--- a/aboutme.html
+++ b/aboutme.html
@@ -20,7 +20,8 @@
 
             <p class="pp">In my free time, I love to study and read. 
                 I also love to help out others, usually in the form of <a class="link3" href="tutoring.html">tutoring</a>.
-                To me, staying active physically is just as important as staying active mentally.</p>
+                To me, staying active physically is just as important as staying active mentally. I've also been starting to get into more frontend development and even a little bit of
+            fullstack.</p>
 
             <p class="fakeheader">some of my hobbies are:</p>
             <div>
@@ -37,7 +38,8 @@
             
             <p class="fakeheader" id="cp">competitive programming:</p>
             <p class="pp">I mainly code on <a class="link3" href="https://leetcode.com/u/plinygg/">LeetCode</a>, 
-                but I also do stuff on <a class="link3" href="https://www.codechef.com/users/plinygg">Codechef</a>, 
+                but I also do stuff on <a class="link3" href="https://codeforces.com/profile/atchang">Codeforces</a>, 
+                <a class="link3" href="https://www.codechef.com/users/plinygg">Codechef</a>, 
                 <a class="link3" href="https://www.codewars.com/users/atchang">Codewars</a>, and 
                 <a class="link3" href="https://usaco.org/index.php">USACO</a>.</p><br>
 
@@ -45,8 +47,8 @@
             
 
             <p class="fakeheader" id="weight">lifting heavy circles:</p>
-            <p class="pp">my numbers as of <strong>11/22/24</strong> are:</p>
-            <p class="pp">squat: ##<br>bench: ##<br>deadlift: ##</p>
+            <p class="pp">my numbers as of <strong>11/22/24</strong> at <strong>144lbs</strong> bodyweight are:</p>
+            <p class="pp">squat: 255lbs<br>bench: 155lbs<br>deadlift: 285lbs</p>
 
             <p class="fakeheader">find me</p>
             <p>email: <a class="link2" href="mailto:achang1@imsa.edu">achang1@imsa.edu</a></p>
