--- a/bookshelf.html
+++ b/bookshelf.html
@@ -15,15 +15,22 @@
                 <a class="element" href="work.html">work</a> //
                 <a class="element" href="aboutme.html">fun</a> //
                 <a class="element" href="bookshelf.html"><b>bookshelf</b></a> //
-                <a class="element" href="aspirations.html">aspirations</a>
+                <a class="element" href="tutoring.html">tutoring</a>
             </nav><br>
-            <p>work in progress!!</p>
+            <p class="fakeheader">book reviews</p>
+
+            <p class="pp" id="welcome"><a class="link3">Three Body Problem - Qixin Liu</a></p>
+            <p class="pp2">wwwwwww</p>
+
+            <p class="pp">Can't Hurt Me - David Goggins</p>
+
+
             <p class="fakeheader">find me</p>
             <p>email: <a class="link2" href="mailto:achang1@imsa.edu">achang1@imsa.edu</a></p>
             <p>github: <a class="link2" href="https://github.com/plinygg">plinygg</a></p>
             <p>linkedin: <a class="link2" href="https://www.linkedin.com/in/aidan-chang-7b1b21337/">me</a></p>
             <p>instagram: <a class="link2" href="https://www.instagram.com/aircondition.cs/">@aircondition.cs</a></p>
-            <p>youtube: <a class="link2" href="https://www.youtube.com/@airconditioncs">@airconditioncs</a></p>
+            <p>youtube: <a class="link2" href="https://www.youtube.com/@airconditioncs">@airconditioncs</a></p><br>
         </div>
     </body>
 </html>
