--- a/index.html
+++ b/index.html
@@ -14,20 +14,21 @@
                 <a class="element" href="index.html"><b>home</b></a> //
                 <a class="element" href="work.html">work</a> //
                 <a class="element" href="aboutme.html">fun</a> //
-                <a class="element" href="aspirations.html">aspirations</a> //
+                <a class="element" href="bookshelf.html">bookshelf</a> //
                 <a class="element" href="tutoring.html">tutoring</a>
             </nav><br>
             <p class="pp">Hello! My name is Aidan Chang. Based out of Chicago, IL but I attend the <a class="link3" href="https://imsa.edu/">Illinois Math and Science Academy</a> as a 16 year old sophomore. 
                 I previously attended <a class="link3" href="https://www.wyoung.org/" >Whitney M. Young Magnet High School</a> for my freshman year. 
                 I have a strong passion for computer science, specifically data structures and algorithms. 
-                I'm most familiar with <a class="link3" href="https://www.python.org/">Python</a>, but I also know <a class="link3" href="https://www.java.com/en/">Java</a> and <a class="link3" href="https://cplusplus.com/">C++</a>.</p>
+                I'm most familiar with <a class="link3" href="https://www.python.org/">Python</a>, but I also know <a class="link3" href="https://www.java.com/en/">Java</a> and <a class="link3" href="https://cplusplus.com/">C++</a>.
+            I also love helping out people in any way that I can.</p>
             <br>
             <p class="fakeheader">find me</p>
             <p>email: <a class="link2" href="mailto:achang1@imsa.edu">achang1@imsa.edu</a></p>
             <p>github: <a class="link2" href="https://github.com/plinygg">plinygg</a></p>
             <p>linkedin: <a class="link2" href="https://www.linkedin.com/in/aidan-chang-7b1b21337/">me</a></p>
             <p>instagram: <a class="link2" href="https://www.instagram.com/aircondition.cs/">@aircondition.cs</a></p>
-            <p>youtube: <a class="link2" href="https://www.youtube.com/@airconditioncs">@airconditioncs</a></p>
+            <p>youtube: <a class="link2" href="https://www.youtube.com/@airconditioncs">@airconditioncs</a></p><br>
         </div>
 
     </body>
