--- a/tutoring.html
+++ b/tutoring.html
@@ -14,17 +14,25 @@
                 <a class="element" href="index.html">home</a> //
                 <a class="element" href="work.html">work</a> //
                 <a class="element" href="aboutme.html">fun</a> //
-                <a class="element" href="aspirations.html">aspirations</a> //
+                <a class="element" href="bookshelf.html">bookshelf</a> //
                 <a class="element" href="tutoring.html"><b>tutoring</b></a>
             </nav><br>
-            <p>work in progress!!</p>
-            <p class="fakeheader">find me</p>
-            <p class="fakeheader">find me</p>
+            <p class="pp">want to learn more about computer science or want personalized tutoring and study plans to become the best computer science version of yourself that you can? Provide your first name and email below and we can get in contact!</p><br>
+            
+            <form action="index.html" class="form">
+                <label>first name:</label>
+                <input type="text" id="fname" required><br>
+                <label>email:</label>
+                <input type="text" id="fname" required><br>
+                <input class="submit" type="submit"></input>
+
+            </form>
+            <p class="fakeheader">find me</p>   
             <p>email: <a class="link2" href="mailto:achang1@imsa.edu">achang1@imsa.edu</a></p>
             <p>github: <a class="link2" href="https://github.com/plinygg">plinygg</a></p>
             <p>linkedin: <a class="link2" href="https://www.linkedin.com/in/aidan-chang-7b1b21337/">me</a></p>
             <p>instagram: <a class="link2" href="https://www.instagram.com/aircondition.cs/">@aircondition.cs</a></p>
-            <p>youtube: <a class="link2" href="https://www.youtube.com/@airconditioncs">@airconditioncs</a></p>
+            <p>youtube: <a class="link2" href="https://www.youtube.com/@airconditioncs">@airconditioncs</a></p><br>
         </div>
     </body>
 </html>
