--- a/work.html
+++ b/work.html
@@ -14,7 +14,7 @@
                 <a class="element" href="index.html">home</a> //
                 <a class="element" href="work.html"><b>work</b></a> //
                 <a class="element" href="aboutme.html">fun</a> //
-                <a class="element" href="aspirations.html">aspirations</a> //
+                <a class="element" href="bookshelf.html">bookshelf</a> //
                 <a class="element" href="tutoring.html">tutoring</a>
             </nav><br>
 
@@ -33,7 +33,7 @@
                     <td class="done">done</td>
                 </tr>
                 <tr>
-                    <td><a class="link" href="https://github.com/plinygg/plinko2">plinko in python</a></td>
+                    <td><a class="link" href="https://github.com/plinygg/plinko2">Mathblitz</a></td>
                     <td class="progress">in progress</td>
                 </tr>
                 <tr>
@@ -95,7 +95,7 @@
             <p>github: <a class="link2" href="https://github.com/plinygg">plinygg</a></p>
             <p>linkedin: <a class="link2" href="https://www.linkedin.com/in/aidan-chang-7b1b21337/">me</a></p>
             <p>instagram: <a class="link2" href="https://www.instagram.com/aircondition.cs/">@aircondition.cs</a></p>
-            <p>youtube: <a class="link2" href="https://www.youtube.com/@airconditioncs">@airconditioncs</a></p>
+            <p>youtube: <a class="link2" href="https://www.youtube.com/@airconditioncs">@airconditioncs</a></p><br>
         </div>
     </body>
 </html>
