--- a/aboutme.html
+++ b/aboutme.html
@@ -69,6 +69,24 @@
                     <td class="done">done</td>
                 </tr>
                 <tr>
+                    <td>Foundation</td>
+                    <td>Isaac Asimov</td>
+                    <td class="done">done</td>
+                </tr>
+            </table>
+            <p class="pp">2025:</p>
+            <table class="center">
+                <tr>
+                    <th>name</th>
+                    <th>author</th>
+                    <th>status</th>
+                </tr>
+                <tr>
+                    <td>Cryptology</td>
+                    <td>Albrecht Beutelspacher</td>
+                    <td class="progress">in progress</td>
+                </tr>  
+                <tr>
                     <td>From Mathematics to Generic Programming</td>
                     <td>Alexander Stepanov</td>
                     <td class="progress">in progress</td>
@@ -94,6 +112,11 @@
                     <td class="progress">in progress</td>
                 </tr>
                 <tr>
+                    <td>A Psalm for the Wild-Built</td>
+                    <td>Becky Chambers</td>
+                    <td class="not">not started</td>
+                </tr>
+                <tr>
                     <td>The Art of Doing Science and Engineering</td>
                     <td>Richard Hamming</td>
                     <td class="not">not started</td>
@@ -103,6 +126,22 @@
             <p class="fakeheader" id="weight">lifting heavy circles:</p>
             <p class="pp">my numbers as of <strong>11/22/24</strong> are:</p>
             <p class="pp">squat: ##<br>bench: ##<br>deadlift: ##</p>
+     
+            <p class="fakeheader" id="golf">golf:</p>
+            <p class="pp">I started playing golf seriously around 2020, and I just finished my second year of varsity golf. As of <strong>11/24/24</strong>,
+            my handicap is a 7.7 (for those of you who care).</p>
+            <p class="fakeheader" id="voll">volleyball:</p>
+            <p class="pp">I started playing volleyball my freshman year of high school, making my freshman team. 
+                I plan on playing varsity volleyball this year. I am an ambidextrious rightside with negative passing ability.</p>
+            
+            <p class="fakeheader" id="bb">basketball:</p>
+            <p class="pp">I've always enjoyed playing basketball, but never playing organized until this year, where I'm playing my first year of varsity basketball. I'm usually the shooting guard or small forward.</p>
+            <p class="fakeheader" id="lock">lockpicking:</p>
+            <p class="pp">I picked up lockpicking in 2023 and have enjoyed the process and grind of trying to get better. 
+                Getting better requries patience and consistency, which is why I love it (similar to a lot of other things on this list).</p>
+            <p class="fakeheader" id="type">typing</p>
+            <p class="pp">Being around computers often, I found a sort of passion with typing. My philosophy is that the faster you can type, the faster you can write code and the faster you can finish assignments.
+                I'm a big <a class="link3" href="https://monkeytype.com/account">MonkeyType</a> guy, but I also practice typing on some other random websites. Top 2% in 15 seconds (179 wpm).</p> 
 
             <p class="fakeheader">find me</p>
             <p>email: <a class="link2" href="mailto:achang1@imsa.edu">achang1@imsa.edu</a></p>
