--- a/submitted.html
+++ b/submitted.html
@@ -17,16 +17,8 @@
                 <a class="element" href="bookshelf.html">bookshelf</a> //
                 <a class="element" href="tutoring.html"><b>tutoring</b></a>
             </nav><br>
-            <p class="pp">want to learn more about computer science or want personalized tutoring and study plans to become the best computer science version of yourself that you can? provide your first name and email below and we can get in contact!</p><br>
-            
-            <form action="submitted.html" class="form">
-                <label>first name:</label>
-                <input type="text" id="fname" required><br>
-                <label>email:</label>
-                <input type="text" id="fname" required><br>
-                <input class="submit" type="submit"></input>
 
-            </form>
+            <p class="pp">thanks for submitting! expect a response within 72 hours.</p>
             <p class="fakeheader">find me</p>   
             <p>email: <a class="link2" href="mailto:achang1@imsa.edu">achang1@imsa.edu</a></p>
             <p>github: <a class="link2" href="https://github.com/plinygg">plinygg</a></p>
