added one more book

--- a/aboutme.html
+++ b/aboutme.html
@@ -73,6 +73,11 @@
                     <td>Isaac Asimov</td>
                     <td class="done">done</td>
                 </tr>
+                <tr>
+                    <td>Annihilation</td>
+                    <td>Jeff VanderMeer</td>
+                    <td class="done">done</td>
+                </tr>
             </table>
             <p class="pp">2025:</p>
             <table class="center">
