--- a/aboutme.html
+++ b/aboutme.html
@@ -87,6 +87,11 @@
                     <th>status</th>
                 </tr>
                 <tr>
+                    <td>A Psalm for the Wild-Built</td>
+                    <td>Becky Chambers</td>
+                    <td class="done">done</td>
+                </tr>
+                <tr>
                     <td>Cryptology</td>
                     <td>Albrecht Beutelspacher</td>
                     <td class="progress">in progress</td>
@@ -115,11 +120,6 @@
                     <td>Cracking the Coding Interview</td>
                     <td>Gayle Laakmann McDowell</td>
                     <td class="progress">in progress</td>
-                </tr>
-                <tr>
-                    <td>A Psalm for the Wild-Built</td>
-                    <td>Becky Chambers</td>
-                    <td class="not">not started</td>
                 </tr>
                 <tr>
                     <td>The Art of Doing Science and Engineering</td>
