added book reviews

--- a/bookshelf.html
+++ b/bookshelf.html
@@ -20,10 +20,20 @@
             <p class="fakeheader">book reviews</p>
 
             <p class="pp" id="welcome"><a class="link3">Three Body Problem - Qixin Liu</a></p>
-            <p class="pp2">wwwwwww</p>
+            <p class="pp2">solid book involved with science and physics. very enjoyable but a little hard to read as well. &#9733;&#9733;&#9733;&#9733;&#9734;</p>
 
             <p class="pp">Can't Hurt Me - David Goggins</p>
+            <p class="pp2">changed how i viewed challenges and hardships. gave me a completely new outlook on life. highly recommend &#9733;&#9733;&#9733;&#9733;&#9733;</p>
 
+            <p class="pp">Foundation - Isaac Asimov</p>
+            <p class="pp2">difficult read, but an interesting take on the future and how it relies on mostly mathematics. studied this book recently for school and it provoked some truly deep discussion.
+                wouldn't read again, but i do recommend it. &#9733;&#9733;&#9733;&#9734;&#9734;</p>
+
+            <p class="pp">Annihilation - Jeff VanderMeer</p>
+            <p class="pp2">short but action-packed read. VanderMeer does a good job of describing the surroundings and immersing the reader in the situation, making each reveal of the environment that much scarier. &#9733;&#9733;&#9733;&#9733;&#9734;</p>
+            
+            <p class="pp">A Psalm for the Wild-Built - Becky Chambers</p>
+            <p class="pp2">short and easy read, it's a book about the future of mankind and near-sentient robots. heartwarming story between a lost person finding themselves and a robot needing answers. I would recommend it as a short intermediary book.&#9733;&#9733;&#9733;&#9733;&#9734;</p>
 
             <p class="fakeheader">find me</p>
             <p>email: <a class="link2" href="mailto:achang1@imsa.edu">achang1@imsa.edu</a></p>
