finished cryptology book

--- a/aboutme.html
+++ b/aboutme.html
@@ -94,7 +94,7 @@
                 <tr>
                     <td>Cryptology</td>
                     <td>Albrecht Beutelspacher</td>
-                    <td class="progress">in progress</td>
+                    <td class="done">done</td>
                 </tr>  
                 <tr>
                     <td>From Mathematics to Generic Programming</td>
