--- a/bookshelf.html
+++ b/bookshelf.html
@@ -33,7 +33,10 @@
             <p class="pp2">short but action-packed read. VanderMeer does a good job of describing the surroundings and immersing the reader in the situation, making each reveal of the environment that much scarier. &#9733;&#9733;&#9733;&#9733;&#9734;</p>
             
             <p class="pp">A Psalm for the Wild-Built - Becky Chambers</p>
-            <p class="pp2">short and easy read, it's a book about the future of mankind and near-sentient robots. heartwarming story between a lost person finding themselves and a robot needing answers. I would recommend it as a short intermediary book.&#9733;&#9733;&#9733;&#9733;&#9734;</p>
+            <p class="pp2">short and easy read, it's a book about the future of mankind and near-sentient robots. heartwarming story between a lost person finding themselves and a robot needing answers. I would recommend it as a short intermediary book. &#9733;&#9733;&#9733;&#9733;&#9734;</p>
+
+            <p class="pp">Cryptology - Albrecht Beutelspacher</p>
+            <p class="pp2">mostly short read, it is a very complex book covering mostly complex ideas about codes, cryptology, and ciphers. I would recommend reading it only if you are really into codebreaking and that matter. &#9733;&#9733;&#9734;&#9734;&#9734;</p>
 
             <p class="fakeheader">find me</p>
             <p>email: <a class="link2" href="mailto:achang1@imsa.edu">achang1@imsa.edu</a></p>
