--- a/work.html
+++ b/work.html
@@ -81,8 +81,8 @@
                     <th>date</th>
                 </tr>
                 <tr>
-                    <td><a class="link" href="index.html">##</a></td>
-                    <td>##-##</td>
+                    <td><a class="link" href="index.html">Premier Scholars Academy</a></td>
+                    <td>2025 - Present</td>
                 </tr>
                 <tr>
                     <td><a class="link" href="index.html">##</a></td>
