added a new book

--- a/aboutme.html
+++ b/aboutme.html
@@ -97,6 +97,16 @@
                     <td class="done">done</td>
                 </tr>  
                 <tr>
+                    <td>Surrounded by Idiots</td>
+                    <td>Thomas Erikson</td>
+                    <td class="done">done</td>
+                </tr>
+                <tr>
+                    <td>Interior Chinatown</td>
+                    <td>Charles Yu</td>
+                    <td class="progress">in progress</td>
+                </tr>
+                <tr>
                     <td>From Mathematics to Generic Programming</td>
                     <td>Alexander Stepanov</td>
                     <td class="progress">in progress</td>
@@ -104,11 +114,6 @@
                 <tr>
                     <td>The Making of the Atomic Bomb</td>
                     <td>Richard Rhodes</td>
-                    <td class="progress">in progress</td>
-                </tr>
-                <tr>
-                    <td>Surrounded by Idiots</td>
-                    <td>Thomas Erikson</td>
                     <td class="progress">in progress</td>
                 </tr>
                 <tr>
