--- a/bookshelf.html
+++ b/bookshelf.html
@@ -37,7 +37,9 @@
 
             <p class="pp">Cryptology - Albrecht Beutelspacher</p>
             <p class="pp2">mostly short read, it is a very complex book covering mostly complex ideas about codes, cryptology, and ciphers. I would recommend reading it only if you are really into codebreaking and that matter. &#9733;&#9733;&#9734;&#9734;&#9734;</p>
-
+            
+            <p class="pp">Surrounded by Idiots - Thomas Erikson</p>
+            <p class="pp2">interesting read and take on the personalities of people and how to categorize them. now that i've read this book, i am constantly classifying myself into roles as well as my peers. would recommend. &#9733;&#9733;&#9733;&#9733;&#9734;</p>
             <p class="fakeheader">find me</p>
             <p>email: <a class="link2" href="mailto:achang1@imsa.edu">achang1@imsa.edu</a></p>
             <p>github: <a class="link2" href="https://github.com/plinygg">plinygg</a></p>
