finished int chinatown

--- a/aboutme.html
+++ b/aboutme.html
@@ -104,7 +104,7 @@
                 <tr>
                     <td>Interior Chinatown</td>
                     <td>Charles Yu</td>
-                    <td class="progress">in progress</td>
+                    <td class="done">done</td>
                 </tr>
                 <tr>
                     <td>From Mathematics to Generic Programming</td>
