--- a/bookshelf.html
+++ b/bookshelf.html
@@ -40,6 +40,10 @@
             
             <p class="pp">Surrounded by Idiots - Thomas Erikson</p>
             <p class="pp2">interesting read and take on the personalities of people and how to categorize them. now that i've read this book, i am constantly classifying myself into roles as well as my peers. would recommend. &#9733;&#9733;&#9733;&#9733;&#9734;</p>
+
+            <p class="pp">Interior Chinatown - Charles Yu</p>
+            <p class="pp2">an interesting take on the status of Chinese/Asian Americans as a permanent outsider, never to be seen as American. good pacing, fast read, and a very unique read. i originally picked up this book because the TV series was great. this book definitely did not disappoint. would recommend. &#9733;&#9733;&#9733;&#9733;&#9734;</p>
+
             <p class="fakeheader">find me</p>
             <p>email: <a class="link2" href="mailto:achang1@imsa.edu">achang1@imsa.edu</a></p>
             <p>github: <a class="link2" href="https://github.com/plinygg">plinygg</a></p>
